python/testData/inspections/PyUnresolvedReferencesInspection/DunderAll/a.py
<warning descr="Unused import statement">from m4 import *</warning>
print(<error descr="Unresolved reference 'm4m3'">m4m3</error>)

<warning descr="Unused import statement">from m1 import *</warning>
print(<error descr="Unresolved reference 'm1m3'">m1m3</error>)

<warning descr="Unused import statement">from m2 import *</warning>
print(<error descr="Unresolved reference 'm2m3'">m2m3</error>)

<warning descr="Unused import statement">from m3 import *</warning>
print(<error descr="Unresolved reference 'm3m3'">m3m3</error>)